fix overflow compare bikes title

--- a/src/styles/blocks/compare.scss
+++ b/src/styles/blocks/compare.scss
@@ -9,6 +9,10 @@
   @include onDesktop {
     margin-top: 164px;
   }
+
+  &__title {
+    margin-bottom: 32px;
+  }
 }
 
 .product {
