--- a/src/styles/blocks/details.scss
+++ b/src/styles/blocks/details.scss
@@ -18,7 +18,7 @@
   &__imgs {
     @include pageGrid;
 
-    margin-bottom: 16px;
+    margin-bottom: 24px;
   }
 
   &__img {
@@ -28,7 +28,6 @@
 
     &--wide {
       @include onTablet {
-        height: inherit;
         grid-column: span 4;
       }
 
